--- a/a2.html
+++ b/a2.html
@@ -27,7 +27,7 @@
         <ul>
             <li><a class="active" href="">Trang chủ A2</a></li>
             <li><a href="">Tạo mã quận huyện</a></li>
-            <li><a href="">Kiểm soát tài khoản quận huyện<noscript></noscript></a></li>
+            <li><a href="">Kiểm soát tài khoản quận huyện</a></li>
             <li><a href="">Tình trạng nhập liệu từ TP/ Quận, Huyện/ Xã</a></li>
             <li><a href="">Phân tích số liệu thống kê từ TP/ Quận, Huyện/ Xã</a></li>
         </ul>
